refactor(android): v3.0 add update node and delete node
refactor(android): v3.0 add update node and delete node